welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:82: error: Unmatched closing brace '}' ignored here
}
^